--- a/src/SCSS/_variables.scss
+++ b/src/SCSS/_variables.scss
@@ -21,6 +21,9 @@ $lightRed: rgba(245, 114, 114, 0.17);
 $lightYellow: rgba(255, 207, 92, 0.17);
 $light-lightGreen: rgba(130, 209, 151, 0.17);
 $lightPurple: rgba(205, 179, 212, 0.17);
+$veryLightGray:  hsl(0, 0%, 98%);
+$grayishBlue: hsl(233, 8%, 62%);
+$lightGrayishBlue: hsl(220, 16%, 96%);
 
 
 // Font
